force-app/main/default/objects/User_Role__c/User_Role__c.object-meta.xml
<CustomObject>
    <description>Created by: RE</description>
    <label>User Role</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>User Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>