force-app/main/default/objects/User_Role__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: RE</description>
    <label>Catalog Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalog_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>User Role</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>User Roles</relationshipLabel>
    <relationshipName>User_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>