force-app/main/default/objects/User_Role__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Created by: RE</description>
    <label>Scope</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>User Roles</relationshipLabel>
    <relationshipName>User_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>